--- a/background.css
+++ b/background.css
@@ -5,10 +5,9 @@
 
 
 /*End Fonts*/
-html{
-  background-color:black ;
-  
-}
+/* html{
+  background-color: linear-gradient(to bottom, #020107 0%, #201b46 100%);
+} */
 .border{
   /* border:1px solid red; */
 }
@@ -34,7 +33,7 @@ html{
   background: linear-gradient(to top, rgba(255, 255, 255, 0), white);
   margin: 0;
   padding: 0;
-  height:1200px;
+  /* height:1200px; */
   /* box-sizing: border-box;
   color: #444;
   text-align: center; */
@@ -180,7 +179,7 @@ h3 {
 }
 
 #title {
-    position: absolute;
+    /* position: absolute; */
     top: 20%;
     left: 0;
     right: 0;
@@ -188,7 +187,7 @@ h3 {
     text-align: center;
     font-family: "lato", sans-serif;
     font-weight: 300;
-    font-size: 80px;
+    font-size: 50px;
     letter-spacing: 10px;
     margin-top: -60px;
     padding-left: 5px;
@@ -199,28 +198,29 @@ h3 {
     -webkit-text-fill-color: transparent;
   }
 html {
+    width:100%;
     height: 100%;
   }
   html body {
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
     margin: 0;
   }
   
   .container {
     display: block;
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
     background: linear-gradient(to bottom, #020107 0%, #201b46 100%);
   }
   .container .text {
     color: #FFF;
-    position: absolute;
+    /* position: absolute; */
     top: 50%;
     right: 50%;
     margin: -10px -75px 0 0;
-    font-size: 20px;
+    /* font-size: 20px; */
     font-family: sans-serif;
     font-weight: bold;
   }
