--- a/index.css
+++ b/index.css
@@ -2,6 +2,14 @@
     width:100vh;
     height:60vh;
 }
+
+    /* margin-top:60%; */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* height: 2.5rem;            Footer height */
+    }
 .under-text{
     font-size:20px;
     border-bottom:3px dashed white;
@@ -47,12 +55,12 @@
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px){
     .blob{
         display: none;
     }
     .shift{
-        font-size:20px !important;
+        font-size:10px !important;
         margin-top:20%;
     }
     .under-text{
@@ -61,4 +69,18 @@
         padding:5%;
     }
 }
+@media screen and (max-height: 500px){
+    .blob{
+        display: none;
+    }
+    .shift{
+        font-size:10px !important;
+        /* margin-top:20%; */
+    }
+    .under-text{
+        font-size:12px !important;
+        letter-spacing:5px;
+        padding:5%;
+    }
+  }
   
