--- a/background.css
+++ b/background.css
@@ -9,7 +9,7 @@
   background-color: linear-gradient(to bottom, #020107 0%, #201b46 100%);
 } */
 .border{
-  /* border:1px solid red; */
+  border:1px solid white;
 }
 /* Start Body */
 .con{
@@ -40,18 +40,26 @@
   font: 16px;
 
 } 
-a{
- text-decoration:none;
- color:#333;
+.con a{
+ text-decoration:none !important ;
+ color:#333 !important;
 }
 
-
+@media only screen and (max-width: 600px) {
+  .con{
+    padding-top:20%;
+    padding-left:5%;
+    padding-right:5%;
+  }
+}
 /* End Body */
 
-h1{
+.con h1{
   margin-bottom: 7%;
 }
-
+.con p{
+  margin-top:16%;
+}
 /*tooltip Box*/
 .con-tooltip {
 
@@ -82,8 +90,8 @@ h1{
   top:-140%;    
   left: -25%;
   border-radius: 9px;
-  font: 16px;
-  transform: translateY(9px);
+  font-size: 16px !important;
+  /* transform: translateY(9px); */
   transition: all 0.3s ease-in-out;
   box-shadow: 0 0 3px rgba(56, 54, 54, 0.86);
 }
@@ -122,18 +130,18 @@ h1{
 }
 
 /*hover ToolTip*/
-.left:hover {transform: translateX(-6px); }
-.top:hover {transform: translateY(-6px);  }
-.bottom:hover {transform: translatex(-6px);}
-.right:hover {transform: translateX(-1px); }
+/* .custom-left:hover {transform: translateX(-6px) !important; } */
+.top:hover {transform: translateY(-6px) !important;  }
+.custom-bottom:hover {transform: translatex(-6px) !important;}
+.right:hover {transform: translateX(-6px) !important; }
 
 
 
-/*left*/
+/*custom-left*/
 
-.left .tooltip{ top:-20%; left:-170%; }
+.custom-left .tooltip{ top:-20%; left:-140%;width:auto;padding:10%; }
 
-.left .tooltip::after{
+.custom-left .tooltip::after{
   top:40%;
   left:90%;
   transform: rotate(-90deg);
@@ -144,19 +152,20 @@ h1{
 
 /*bottom*/
 
-.bottom .tooltip { top:115%; left:-20%; }
+.custom-bottom .tooltip { top:115%; left:-20%; }
 
-.bottom .tooltip::after{
+.custom-bottom .tooltip::after{
   top:-17%;
   left:40%;
   transform: rotate(180deg);
 }
 
-
+/* Top */
+.top .tooltip{ top:-180%;width:auto;padding:7%; }
 
 /*right*/
 
-.right .tooltip { top:-20%; left:115%; }
+.right .tooltip { top:-20%; left:115%; width:auto}
 
 .right .tooltip::after{
   top:40%;
@@ -170,6 +179,7 @@ h3 {
     padding: 10px 20px;
     border-radius: 56px;
     width: 8em;
+    font-size:15px;
     margin: 20% auto 1% auto;
   
 }
@@ -192,14 +202,10 @@ h3 {
     margin-top: -60px;
     padding-left: 5px;
 }
-#title span {
-    background: -webkit-linear-gradient(white, #38495a);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+
 html {
-    width:100%;
-    height: 100%;
+    /* width:100%; */
+    /* height: 100%; */
   }
   html body {
     width: inherit;
@@ -207,14 +213,15 @@ html {
     margin: 0;
   }
   
-  .container {
+  .container-custom {
     display: block;
     position: relative;
     width: inherit;
     height: inherit;
     background: linear-gradient(to bottom, #020107 0%, #201b46 100%);
+    padding-bottom:10%;
   }
-  .container .text {
+  .container-custom .text {
     color: #FFF;
     /* position: absolute; */
     top: 50%;
