--- a/index.css
+++ b/index.css
@@ -279,6 +279,12 @@ footer {
     .name-title {
         border-right:none;
     }
+    .description {
+        font-size: 20px;
+    }
+    .left-bottom-content p {
+        font-size: 18px;
+    }
   }
 
 
